Fix a minor break in modal

--- a/app/styles/modal.scss
+++ b/app/styles/modal.scss
@@ -30,3 +30,10 @@
     cursor: pointer;
   }
 }
+
+.card-height {
+  @media(max-width: 780px) {
+    height: 95vh;
+    width: 80%;
+  }
+}
